srcs/tester/base/list/assign/log.txt
In file included from ./base/list/assign/patched.cpp:3:
In file included from ../list.hpp:3:
In file included from ../sfinae.hpp:4:
../iterator.hpp:58:35: error: called object type 'ft::list_iterator<ft::bidirectional_iterator_tag, int, long, ft::list<int, std::allocator<int> >::Node<int> *, int &>::pointer' (aka 'ft::list<int, std::allocator<int> >::Node<int> *') is not a function or function pointer
  reference operator*() { return *ptr_(); };
                                  ^~~~
../list.hpp:135:45: note: in instantiation of member function 'ft::list_iterator<ft::bidirectional_iterator_tag, int, long, ft::list<int, std::allocator<int> >::Node<int> *, int &>::operator*' requested here
    { for(; first != last; ++first) NewNode(*first, position.GetPtr()); };
                                            ^
../list.hpp:121:14: note: in instantiation of function template specialization 'ft::list<int, std::allocator<int> >::insert<ft::list_iterator<ft::bidirectional_iterator_tag, int, long, ft::list<int, std::allocator<int> >::Node<int> *, int &> >' requested here
  { clear(); insert(iterator(end_), first, last); };
             ^
./base/list/assign/patched.cpp:11:9: note: in instantiation of function template specialization 'ft::list<int, std::allocator<int> >::assign<ft::list_iterator<ft::bidirectional_iterator_tag, int, long, ft::list<int, std::allocator<int> >::Node<int> *, int &> >' requested here
 second.assign (first.begin(),first.end()); // a copy of first
        ^
1 error generated.
